--- a/stages/processing/basic/pom.xml
+++ b/stages/processing/basic/pom.xml
@@ -60,7 +60,17 @@
             <version>2.1</version>
             <type>jar</type>
             <scope>test</scope>
-        </dependency>               
+        </dependency>
+        <dependency>
+            <groupId>net.htmlparser.jericho</groupId>
+            <artifactId>jericho-html</artifactId>
+            <version>3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 
     <build>
