Changes 'examples' to depend on api instead of basic-stages. Adds examples to parent build.

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<module>database-impl/mongodb</module>
 	<module>database-impl/inmemory</module>
 	<module>core</module>
+	<module>examples</module>
   </modules>
 
   <build>
