--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.findwise.hydra</groupId>
     <artifactId>hydra-examples</artifactId>
     <version>0.3.0-SNAPSHOT</version>
-    <name>Hydra Test Setups</name>
+    <name>${artifactId}</name>
     <description>Contains scripts to perform certain manual tests</description>
 
     <build>
@@ -69,7 +69,7 @@
 
         <dependency>
             <groupId>com.findwise.hydra</groupId>
-            <artifactId>hydra-basic-stages</artifactId>
+            <artifactId>hydra-api</artifactId>
             <version>0.3.0-SNAPSHOT</version>
         </dependency>
 
