Adds resource.properties to bin folder alongside built hydra-core. Adds some comments to properties file.

--- a/core/src/main/resources/resource.properties
+++ b/core/src/main/resources/resource.properties
@@ -1,8 +1,15 @@
-database_url = localhost
-polling_interval = 10
+# Core
 namespace = pipeline
+polling_interval = 10
+performance_logging = false
+# Port for Hydra core-to-stage communication
+#rest_port = 12001
+
+# Backing database
+database_url = localhost
 database_user = admin
 database_password = changeme
+
+# oldDocuments
 old_max_count = 2000
 old_max_size_mb = 200
-performance_logging = false
