Added stages as submodule to parent

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<module>database-impl/inmemory</module>
 	<module>core</module>
 	<module>examples</module>
+    <module>stages</module>
   </modules>
 
   <build>
