--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>hydra-tika-stages</artifactId>
 	<version>0.3.0-SNAPSHOT</version>
 	<description>Tika Text Extraction Stage</description>
-    <name>${project.artifactId}</name>
+	<name>${project.artifactId}</name>
 	<url>http://findwise.github.com/Hydra</url>
 
 	<licenses>
@@ -48,7 +48,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -59,48 +59,51 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>1.7.1</version>
-                <configuration>
-                    <shadedArtifactAttached>true</shadedArtifactAttached>
-                    <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
-                    <!-- Setting the finalName to fit the naming convention of other stages -->
-                    <finalName>${project.name}-jar-with-dependencies</finalName>
-                    <transformers>
-                        <!-- Adding the main class to make the jar executable -->
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>com.findwise.hydra.stage.GroupStarter</mainClass>
-                        </transformer>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>1.7.1</version>
+				<configuration>
+					<shadedArtifactAttached>true</shadedArtifactAttached>
+					<shadedClassifierName>jar-with-dependencies</shadedClassifierName>
+					<!-- Setting the finalName to fit the naming convention of other stages -->
+					<finalName>${project.name}-jar-with-dependencies</finalName>
+					<transformers>
+						<!-- Adding the main class to make the jar executable -->
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+							<mainClass>com.findwise.hydra.stage.GroupStarter</mainClass>
+						</transformer>
 
-                        <!-- This merges the service resources, the important
-                             one in our case being META-INF/services/org.apache.tika.parser.Parser -->
-                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                    </transformers>
+						<!-- This merges the service resources, the important one in our case 
+							being META-INF/services/org.apache.tika.parser.Parser -->
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+					</transformers>
 
-                    <!-- We need to remove any jar signatures since they won't match ours. Otherwise we get
-                    java.lang.SecurityException: Invalid signature file digest for Manifest main attributes -->
-                    <filters>
-                        <filter>
-                            <artifact>*:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/*.SF</exclude>
-                                <exclude>META-INF/*.DSA</exclude>
-                                <exclude>META-INF/*.RSA</exclude>
-                            </excludes>
-                        </filter>
-                    </filters>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+					<!-- We need to remove any jar signatures since they won't match ours. 
+						Otherwise we get java.lang.SecurityException: Invalid signature file digest 
+						for Manifest main attributes -->
+					<filters>
+						<filter>
+							<artifact>*:*</artifact>
+							<excludes>
+								<exclude>META-INF/*.SF</exclude>
+								<exclude>META-INF/*.DSA</exclude>
+								<exclude>META-INF/*.RSA</exclude>
+							</excludes>
+						</filter>
+					</filters>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -124,6 +127,14 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.14</version>
+				<configuration>
+					<argLine>-Dfile.encoding=UTF-8</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
