Changes unit tests that test integration into actual integration tests, run with 'mvn verify'

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
       <executions>
         <execution>
           <id>copy</id>
-          <phase>compile</phase>
+          <phase>package</phase>
           <configuration>
             <tasks>
               <copy file="core/target/hydra-core-jar-with-dependencies.jar" tofile="bin/hydra-core.jar"/>
