--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,6 +24,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<surefire.version>2.9</surefire.version>
+		<failsafe.version>2.9</failsafe.version>
 	</properties>
 	
 	<developers>
@@ -42,13 +44,26 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.9</version>
+						<version>${surefire.version}</version>
 						<configuration>
 							<includes>
 								<include>**/**/*.java</include>
 							</includes>
 							<forkMode>once</forkMode>
 						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<version>${surefire.version}</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+							</execution>
+						</executions>
 					</plugin>
 				</plugins>
 			</build>
@@ -65,12 +80,25 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.9</version>
+						<version>${failsafe.version}</version>
 						<configuration>
 							<excludes>
 								<exclude>**/**/*StressTest.java</exclude>
 							</excludes>
 						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<version>${failsafe.version}</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+							</execution>
+						</executions>
 					</plugin>
 				</plugins>
 			</build>
@@ -207,7 +235,6 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
-
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
