Added admin-service to parent pom

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <packaging>pom</packaging>
   
   <modules>
+	<module>admin-service</module>
 	<module>api</module>
 	<module>database</module>
 	<module>database-impl/mongodb</module>
