--- a/database/pom.xml
+++ b/database/pom.xml
@@ -1,9 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.findwise.hydra</groupId>
+	<parent>
+		<groupId>com.findwise.hydra</groupId>
+		<artifactId>hydra-parent</artifactId>
+		<version>0.4.0-SNAPSHOT</version>
+	</parent>
 	<artifactId>hydra-database</artifactId>
 	<packaging>jar</packaging>
-	<version>0.4.0-SNAPSHOT</version>
 	<name>${project.artifactId}</name>
 	<description>Hydra Database Package - Database interfaces</description>
 	<url>http://findwise.github.com/Hydra</url>
