--- a/database-impl/mongodb/pom.xml
+++ b/database-impl/mongodb/pom.xml
@@ -4,6 +4,7 @@
 		<groupId>com.findwise.hydra</groupId>
 		<artifactId>hydra-parent</artifactId>
 		<version>0.4.0-SNAPSHOT</version>
+		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>hydra-mongodb</artifactId>
 	<packaging>jar</packaging>
