--- a/pom.xml
+++ b/pom.xml
@@ -13,31 +13,13 @@
 	<module>database-impl/inmemory</module>
 	<module>core</module>
 	<module>examples</module>
-    <module>stages</module>
+	<module>stages</module>
+	<module>distribution</module>
   </modules>
 
   <build>
     <plugins>
-    <plugin>
-      <artifactId>maven-antrun-plugin</artifactId>
-      <version>1.4</version>
-      <executions>
-        <execution>
-          <id>copy</id>
-          <phase>package</phase>
-          <configuration>
-            <tasks>
-              <copy file="core/target/hydra-core-jar-with-dependencies.jar" tofile="bin/hydra-core.jar"/>
-              <copy file="core/target/resource.properties" tofile="bin/resource.properties"/>
-            </tasks>
-          </configuration>
-          <goals>
-            <goal>run</goal>
-          </goals>
-        </execution> 
-      </executions>
-  </plugin>
-  <plugin> 
+  <plugin>
       <artifactId>maven-javadoc-plugin</artifactId>
       <version>2.8.1</version>
       <configuration>
