--- a/pom.xml
+++ b/pom.xml
@@ -1,31 +1,32 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.findwise.hydra</groupId>
-  <artifactId>hydra-parent</artifactId>
-  <version>0.4.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  
-  <modules>
-	<module>admin-service</module>
-	<module>api</module>
-	<module>database</module>
-	<module>database-impl/mongodb</module>
-	<module>database-impl/inmemory</module>
-	<module>core</module>
-	<module>examples</module>
-	<module>stages</module>
-	<module>distribution</module>
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.findwise.hydra</groupId>
+	<artifactId>hydra-parent</artifactId>
+	<version>0.4.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
-  <build>
-    <plugins>
-  <plugin>
-      <artifactId>maven-javadoc-plugin</artifactId>
-      <version>2.8.1</version>
-      <configuration>
-          <aggregate>true</aggregate>
-      </configuration>
-  </plugin> 
-    </plugins>
-  </build>
+	<modules>
+		<module>admin-service</module>
+		<module>api</module>
+		<module>database</module>
+		<module>database-impl/mongodb</module>
+		<module>database-impl/inmemory</module>
+		<module>core</module>
+		<module>examples</module>
+		<module>stages</module>
+		<module>distribution</module>
+	</modules>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.8.1</version>
+				<configuration>
+					<aggregate>true</aggregate>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
