--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
 	<packaging>pom</packaging>
 	<url>http://findwise.github.com/Hydra</url>
 
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
 	<modules>
 		<module>admin-service</module>
 		<module>api</module>
