Moved <scm> configuration to parent pom

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
 		</license>
 	</licenses>
 
+	<scm>
+		<connection>scm:git:git@github.com:Findwise/Hydra.git</connection>
+		<developerConnection>scm:git:git@github.com:Findwise/Hydra.git</developerConnection>
+		<url>https://github.com/Findwise/Hydra</url>
+	</scm>
+
 	<modules>
 		<module>admin-service</module>
 		<module>api</module>
