Added sonatype oss-parent as parent to our parent (yo dawg)

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,16 @@
 	<packaging>pom</packaging>
 	<url>http://findwise.github.com/Hydra</url>
 
+	<!--
+	To simplify deployment to Sonatype OSS we inherit from their pom.
+	https://docs.sonatype.org/display/Repository/Sonatype+OSS+Maven+Repository+Usage+Guide#SonatypeOSSMavenRepositoryUsageGuide-7a.1.POMandsettingsconfig
+	-->
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
