Adds system property for setting the location of admin-service configuration.

--- a/admin-service/src/main/resources/admin-service.properties
+++ b/admin-service/src/main/resources/admin-service.properties
@@ -33,7 +33,7 @@ database.url = localhost
 # Type: String
 # Default: -
 
-database.password = admin
+# database.password = admin
 
 ###############################################
 # Settings for storage of processed documents #
