--- a/stages/debugging/debugging/pom.xml
+++ b/stages/debugging/debugging/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.findwise.hydra</groupId>
 		<artifactId>stages</artifactId>
-		<version>0.3.1</version>
+		<version>0.4.0-SNAPSHOT</version>
 		<relativePath>../..</relativePath>
 	</parent>
 	<artifactId>hydra-debugging</artifactId>
@@ -15,12 +15,12 @@
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
 			<artifactId>hydra-api</artifactId>
-			<version>0.3.1</version>
+			<version>${parent.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.findwise.hydra</groupId>
 			<artifactId>hydra-mongodb</artifactId>
-			<version>0.3.1</version>
+			<version>${parent.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
