--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -6,9 +6,14 @@
 		<artifactId>hydra-parent</artifactId>
 		<version>0.4.0-SNAPSHOT</version>
 	</parent>
-    <artifactId>hydra-examples</artifactId>
+    <artifactId>hydra-tools</artifactId>
     <name>${artifactId}</name>
-    <description>Contains scripts to perform certain manual tests</description>
+    <description>Tools for interacting with and setting up Hydra</description>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>inserter</module>
+    </modules>
 
     <dependencies>
         <dependency>
@@ -23,36 +28,11 @@
             <version>0.4.0-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.findwise.hydra</groupId>
-            <artifactId>hydra-mongodb</artifactId>
-            <version>0.4.0-SNAPSHOT</version>
-        </dependency>
-
-        <!-- Commandline parser -->
-        <dependency>
-            <groupId>com.beust</groupId>
-            <artifactId>jcommander</artifactId>
-            <version>1.26</version>
-        </dependency>
-
         <!-- Test deps -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.10</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
