--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -27,7 +27,7 @@
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<artifactId>junit-dep</artifactId>
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
