--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -42,6 +42,12 @@
 			<artifactId>wiremock</artifactId>
 			<version>1.33</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit-dep</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
