--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.findwise.hydra</groupId>
 		<artifactId>hydra-parent</artifactId>
-		<version>0.5.0</version>
+		<version>0.6.0-SNAPSHOT</version>
 	</parent>
     <artifactId>tools</artifactId>
     <name>${project.artifactId}</name>
