--- a/stages/processing/tika/pom.xml
+++ b/stages/processing/tika/pom.xml
@@ -20,6 +20,11 @@
 			<type>jar</type>
 		</dependency>
 		<dependency>
+			<groupId>com.findwise.hydra</groupId>
+			<artifactId>hydra-http-utils</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-parsers</artifactId>
 			<version>1.1</version>
@@ -45,6 +50,10 @@
 				<exclusion>
 					<groupId>junit</groupId>
 					<artifactId>junit-dep</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
